--- a/index.html
+++ b/index.html
@@ -1,33 +1,50 @@
 <html>
-
-<head>
+  <head>
     <title>ROCK, PAPER, or SCISSORS - GAME</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+  </head>
 
-</head>
-
-<body>
-    <header>
-        <h1>This is Rock, Paper, or Scissors game.</h1>
-        <h3>Enjoy the game and good luck beating this PC!</h3>
-    </header>
-    <div class="selection">
-        <h4>Make your choice below.</h4>
-            <div class="userchoice">
-                <button id="ROCK" onclick="userSelection(this.id)">ROCK</button>
-            </div>
-            <div class="userchoice">
-                <button id="PAPER" onclick="userSelection(this.id)">PAPER</button>
-            </div>
-            <div class="userchoice">
-                <button id="SCISSORS" onclick="userSelection(this.id)">SCISSORS</button>
-            </div>
+  <body>
+    <div class="cotainer container-style text-center mx-auto mt-5">
+      <div class="header p-3">
+        <h1 class="mb-4">This is Rock, Paper, or Scissors game.</h1>
+        <h4>Enjoy the game and good luck beating this PC!</h3>
+      </div>
+      <div class="flex justify-content-center">
+        <div class="m-3">
+          <h4>Make your choice below.</h4>
+          <div class="d-grid gap-3 col-3 mx-auto my-4">
+            <button class="btn btn-warning" type="button" id="ROCK">
+              ROCK
+            </button>
+            <button class="btn btn-warning" type="button" id="PAPER">
+              PAPER
+            </button>
+            <button class="btn btn-warning" type="button" id="SCISSORS">
+              SCISSORS
+            </button>
+          </div>
+        </div>
+        <div class="my-5">
+          <h4>Computere's choice:</h4>
+          <div class="d-grid gap-3 col-3 mx-auto my-4">
+            <div class="btn btn-warning mb-5" id="pc" style="display: none"></div>
+          </div>
+        </div>
+        <div class="result" id="result"></div>
+      </div>
     </div>
-    <div class="selection">
-            <h4>Computere's choice:</h4>
-                <div id="pc"></div>
-    </div>
-    <div id="result"></div>
-    <script src="script.js"></script>       
-</body>>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
+  </body>
 </html>
